--- a/code/index.html
+++ b/code/index.html
@@ -4,19 +4,125 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">    <meta name="viewport" content= "width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <div class="navigation-container">
+        <nav class="navigation">
+          <a href="" class="navigation-logo"></a>
+            <img class="navigation-logo-img" src="the-telegraph-logo.svg" />
+          <ul class="navigation-list">
+            <li class="navigation-list-item" style="display:inline">
+              <a href="" alt="1">Inrikes</a>
+            </li>
+            <li class="navigation-list-item" style="display:inline">
+              <a href="" alt="1">Utrikes</a>
+            </li>
+            <li class="navigation-list-item" style="display:inline">
+              <a href="" alt="1">Sport</a>
+            </li>
+            <li class="navigation-list-item" style="display:inline">
+              <a href="" alt="1">Kultur</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
+    <section class="big-news-parent">
+      <div class="big-news-child">
+        <h4>SUBJECT</h4>
+        <img class="news-img" src="https://picsum.photos/600/400" alt="random photo" />
+        <h1>Ut enim ad minim veniam quis nostrud</h2>
+        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="news-cards-parent">
+      <div class="news-cards-child green">
+        <h4>SUBJECT</h4>
+        <img class="news-img" src="https://picsum.photos/250/125" alt="random photo" />
+        <h2>Duis aute irure dolor in reprehenderit in voluptate</h2>
+        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+      <div class="news-cards-child red">
+        <h4>SUBJECT</h4>
+        <img class="news-img" src="https://picsum.photos/400/200" alt="random photo" />
+        <h2>Duis aute irure dolor in reprehenderit in voluptate</h2>
+        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+      <div class="news-cards-child blue">
+        <h4>SUBJECT</h4>
+        <img class="news-img" src="https://picsum.photos/500/250" alt="random photo" />
+        <h2>Duis aute irure dolor in reprehenderit in voluptate</h2>
+        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+      <div class="news-cards-child green">
+        <h4>SUBJECT</h4>
+        <img class="news-img" src="https://picsum.photos/600/300" alt="random photo" />
+        <h2>Duis aute irure dolor in reprehenderit in voluptate</h2>
+        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+      <div class="news-cards-child red">
+        <h4>SUBJECT</h4>
+        <img class="news-img" src="https://picsum.photos/450/225" alt="random photo" />
+        <h2>Duis aute irure dolor in reprehenderit in voluptate</h2>
+        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+      <div class="news-cards-child orange">
+        <h4>SUBJECT</h4>
+        <img class="news-img" src="https://picsum.photos/350/175" alt="random photo" />
+        <h2>Duis aute irure dolor in reprehenderit in voluptate</h2>
+        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+      <div class="news-cards-child green">
+        <h4>SUBJECT</h4>
+        <img class="news-img" src="https://picsum.photos/480/240" alt="random photo" />
+        <h2>Duis aute irure dolor in reprehenderit in voluptate</h2>
+        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+      <div class="news-cards-child pink">
+        <h4>SUBJECT</h4>
+        <img class="news-img" src="https://picsum.photos/460/230" alt="random photo" />
+        <h2>This is a headline size two</h2>
+        <p>This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph.</p>
+      </div>
+      <div class="news-cards-child blue">
+        <h4>SUBJECT</h4>
+        <img class="news-img" src="https://picsum.photos/440/220" alt="random photo" />
+        <h2>This is a headline size two</h2>
+        <p>This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph.</p>
+      </div>
+      <div class="news-cards-child green">
+        <h4>SUBJECT</h4>
+        <img class="news-img" src="https://picsum.photos/320/160" alt="random photo" />
+        <h2>This is a headline size two</h2>
+        <p>This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph.</p>
+      </div>
+      <div class="news-cards-child red">
+        <h4>SUBJECT</h4>
+        <img class="news-img" src="https://picsum.photos/360/180" alt="random photo" />
+        <h2>This is a headline size two</h2>
+        <p>This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph.</p>
+      </div>
+      <div class="news-cards-child blue">
+        <h4>SUBJECT</h4>
+        <img class="news-img" src="https://picsum.photos/340/170" alt="random photo" />
+        <h2>This is a headline size two</h2>
+        <p>This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph.</p>
+      </div>
+      
+
     </section>
+    
+    <footer>
+      <p>Copyright © The Telegraph 2021</p>
+    </footer>
+
   </body>
 </html>
