created the smaller news card section and did some styling

--- a/code/index.html
+++ b/code/index.html
@@ -16,10 +16,10 @@
         <h1 class="sloth-news-title">Sloth News</h1>
       </div>
       <nav class="nav">
-        <a class="nav-link" href="#">First link</a>
-        <a class="nav-link" href="#">Second link</a>
-        <a class="nav-link" href="#">Third link</a>
-        <a class="nav-link" href="#">Fourth link</a>
+        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="#">About Us</a>
+        <a class="nav-link" href="#">About Sloths</a>
+        <a class="nav-link" href="#">Contact</a>
       </nav>
     </header>
 
@@ -27,12 +27,55 @@
       <!-- The big news content -->
       <img class="big-news-img" src="./big-news-img.jpg" alt="big-news-sloth">
       <article class="big-news-article">
-        <p class="big-news-text">big news text</p>
+        <h2 class="big-news-title">Latest news:</h2>
+        <p class="big-news-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit...</p> 
+        <a class="big-news-link" href="#">Read more...</a>
       </article>
     </section>
 
     <section class="other-news">
       <!-- The other news  -->
+      <article class="news-card">
+        <img class="news-card-img" src="./sloth-img1.jpg" alt="sloth-img1">
+        <p class="news-text">Lorem ipsum dolor sit amet.</p>
+        <a class="other-news-link" href="#">Read more...</a>
+      </article>
+      <article class="news-card">
+        <img class="news-card-img" src="./sloth-img2.jpg" alt="sloth-img2">
+        <p class="news-text">Lorem ipsum dolor sit amet.</p>
+        <a class="other-news-link" href="#">Read more...</a>
+      </article>
+      <article class="news-card">
+        <img class="news-card-img" src="./sloth-img3.jpg" alt="sloth-img3">
+        <p class="news-text">Lorem ipsum dolor sit amet.</p>
+        <a class="other-news-link" href="#">Read more...</a>
+      </article>
+      <article class="news-card">
+        <img class="news-card-img" src="./sloth-img4.jpg" alt="sloth-img4">
+        <p class="news-text">Lorem ipsum dolor sit amet.</p>
+        <a class="other-news-link" href="#">Read more...</a>
+      </article>
+      <article class="news-card">
+        <img class="news-card-img" src="./sloth-img5.jpg" alt="sloth-img5">
+        <p class="news-text">Lorem ipsum dolor sit amet.</p>
+        <a class="other-news-link" href="#">Read more...</a>
+      </article>
+      <article class="news-card">
+        <img class="news-card-img" src="./sloth-img6.jpg" alt="sloth-img6">
+        <p class="news-text">Lorem ipsum dolor sit amet.</p>
+        <a class="other-news-link" href="#">Read more...</a>
+      </article>
+      <article class="news-card">
+        <img class="news-card-img" src="./sloth-img7.jpg" alt="sloth-img7">
+        <p class="news-text">Lorem ipsum dolor sit amet.</p>
+        <a class="other-news-link" href="#">Read more...</a>
+      </article>
+      <article class="news-card">
+        <img class="news-card-img" src="./sloth-img8.jpg" alt="sloth-img8">
+        <p class="news-text">Lorem ipsum dolor sit amet.</p>
+        <a class="other-news-link" href="#">Read more...</a>
+      </article>
     </section>
+
   </body>
 </html>
