clened up the code

--- a/code/index.html
+++ b/code/index.html
@@ -29,62 +29,106 @@
     <section class="main-container">
       <section class="big-news">
         <div>
-        <img class="sushi" src="./Sushi.jpg" alt="Picture of sushi"> </div>
-        <div class="text-big-news"><p> <h2>New trend on the rise: Sushi meets Swedish Fika</h2>
-        <h3>- Inventor calls it Fishi</h3>
-        <p>Cupcake ipsum dolor sit amet candy. Tootsie roll candy chupa chups ice cream toffee biscuit chupa chups jelly beans. Donut jujubes cupcake cheesecake oat cake tootsie roll candy candy canes apple pie. Pudding biscuit lemon drops oat cake shortbread shortbread gummi bears icing. Danish toffee gingerbread topping dragée cheesecake dessert cake. Cotton candy gingerbread oat cake dragée jelly beans. Tootsie roll carrot cake dragée brownie dessert cotton candy. Tootsie roll fruitcake dessert apple pie sugar plum caramels lemon drops fruitcake. Topping macaroon danish cookie halvah caramels chocolate cake. Tart bear claw gummi bears jelly beans fruitcake. Gummi bears sweet roll marzipan carrot cake marzipan. Tootsie roll candy cotton candy dragée gingerbread.
-        </p>
-      </div>
+          <img class="sushi" 
+          src="./Sushi.jpg" 
+          alt="Picture of sushi"> 
+        </div>
+        <div class="text-big-news">
+            <h2>New trend on the rise: Sushi meets Swedish Fika
+            </h2>
+            <h3>- Inventor calls it Fishi
+            </h3>
+          <p>Cupcake ipsum dolor sit amet candy. Tootsie roll candy chupa chups ice cream toffee biscuit chupa chups jelly beans. Donut jujubes cupcake cheesecake oat cake tootsie roll candy candy canes apple pie. Pudding biscuit lemon drops oat cake shortbread shortbread gummi bears icing. Danish toffee gingerbread topping dragée cheesecake dessert cake. Cotton candy gingerbread oat cake dragée jelly beans. Tootsie roll carrot cake dragée brownie dessert cotton candy. Tootsie roll fruitcake dessert apple pie sugar plum caramels lemon drops fruitcake. Topping macaroon danish cookie halvah caramels chocolate cake. Tart bear claw gummi bears jelly beans fruitcake. Gummi bears sweet roll marzipan carrot cake marzipan. Tootsie roll candy cotton candy dragée gingerbread.
+          </p>
+        </div>
       </section>
 
       <hr>
-    <section class="other-news">
+      <section class="other-news">
+        <div class="small-news">
+          <img class="image-other" 
+          src="./biscuit-basket.jpg" 
+          alt="Biscuit in a basket">
+          <div class="text-other-news">
+            <a href="#"> 
+              <h3>Kex/tjex argument continues in Swedish parlament
+              </h3>
+            </a>
+          </div> 
+        </div>
+        <div class="small-news">
+          <img class="image-other" 
+          src="./biscuit-box.jpg" 
+          alt="Biscuits in a box">
+          <div class="text-other-news">
+            <a href="#">
+                <h3>New version of the Ballerina biscuit in stores next month</h3></a>
+         </div>
+        </div>
+        <div class="small-news">
+          <img class="image-other" 
+          src="./canoe.jpg" 
+          alt="Picture of a woman in a canoe">
+          <div class="text-other-news">
+            <a href="#">
+              <h3>Fika for adventurers; tips on what to bring
+              </h3>
+            </a>
+          </div>
+        </div>
+        <div class="small-news">
+          <img class="image-other" 
+          src="./child-baking.jpg" 
+          alt="Woman and Child in kitchen baking">
+          <div class="text-other-news">
+            <a href="#">
+                <h3>How to get you child interested in baking
+                </h3>
+              </a>
+          </div>
+        </div>
       <div class="small-news">
-        <img class="image-other" src="./biscuit-basket.jpg" alt="Biscuit in a basket">
+        <img class="image-other" 
+        src="./cinnamon-bun.jpg" 
+        alt="Cinnamon buns">
         <div class="text-other-news">
-        <a href="#"> <h3>Kex/tjex argument continues in Swedish parlament</h3></a>
-      </div> 
-      </div>
-      <div class="small-news">
-        <img class="image-other" src="./biscuit-box.jpg" alt="Biscuits in a box">
-        <div class="text-other-news">
-        <a href="#"><h3>New version of the Ballerina biscuit in stores next month</h3></a>
+          <a href="#">
+            <h3>Research indicates that fika could be the solution to world peace
+            </h3>
+          </a>
         </div>
       </div>
       <div class="small-news">
-        <img class="image-other" src="./canoe.jpg" alt="Picture of a woman in a canoe">
+        <img class="image-other" 
+        src="./coffee-cups.jpg" 
+        alt="Cups of coffee in a circle">
         <div class="text-other-news">
-        <a href="#"><h3>Fika for adventurers; tips on what to bring</h3></a>
+          <a href="#">
+            <h3>What your coffee cup tells us about you
+            </h3>
+          </a>
         </div>
       </div>
       <div class="small-news">
-        <img class="image-other" src="./child-baking.jpg" alt="Woman and Child in kitchen baking">
-        <div class="text-other-news">
-          <a href="#"><h3>How to get you child interested in baking</h3></a>
-       </div>
+        <img class="image-other" 
+        src="./healthy-biscuit.jpg" 
+        alt="Biscuits with fruit on">
+          <div class="text-other-news">
+            <a href="#">
+              <h3>If there's fruit on them, they're healthy!
+              </h3>
+           </a>
+         </div>
       </div>
       <div class="small-news">
-        <img class="image-other" src="./cinnamon-bun.jpg" alt="Cinnamon buns">
+        <img class="image-other" 
+        src="./Macaron-tower.jpg" 
+        alt="Tower of macarons">
         <div class="text-other-news">
-        <a href="#"><h3>Research indicates that fika could be the solution to world peace</h3></a>
-        </div>
-      </div>
-      <div class="small-news">
-        <img class="image-other" src="./coffee-cups.jpg" alt="Cups of coffee in a circle">
-        <div class="text-other-news">
-        <a href="#"><h3>What your coffee cup tells us about you</h3></a>
-       </div>
-      </div>
-      <div class="small-news">
-        <img class="image-other" src="./healthy-biscuit.jpg" alt="Biscuits with fruit on">
-        <div class="text-other-news">
-        <a href="#"><h3>If there's fruit on them, they're healthy!</h3></a>
-       </div>
-      </div>
-      <div class="small-news">
-        <img class="image-other" src="./Macaron-tower.jpg" alt="Tower of macarons">
-        <div class="text-other-news">
-        <a href="#"><h3>How your choice in wedding fika can make your special day unique</h3></a>
+          <a href="#">
+            <h3>How your choice in wedding fika can make your special day unique
+            </h3>
+          </a>
         </div>
       </div>
     </section>
