--- a/code/index.html
+++ b/code/index.html
@@ -17,7 +17,7 @@
       </div>
       <h1 class="header-text">MUSIC UNDERGROUND</h1>
     </header>
-      <nav> 
+      <nav>
         <a class="nav-menu" href="#Events">Events</a>
         <a class="nav-menu" href="#Music">Music</a>
         <a class="nav-menu" href="#About Us">About Us</a>
@@ -80,6 +80,7 @@
     </section>
 
     <footer>
+      <p>Stay in the Loop:</p>
       <div class="social-media">
         <a class="social-media-link" href="#Facebook">Facebook</a>
         <a class="social-media-link" href="#Instagram">Instagram</a>
