Added a footer and a button that target the top of the page. Made the footer visable for only mobile and tablet.

--- a/code/index.html
+++ b/code/index.html
@@ -11,6 +11,9 @@
 
     <link rel="stylesheet" href="./style.css"/>
 
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/1c9ad4b785.js" crossorigin="anonymous"></script>
+
     <!-- Meta tag for responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -18,7 +21,7 @@
   <body>
 
     <!-- Header and navbar -->
-    <header>
+    <header id="header">
       <div class="flex-header">
         <div class="navbar-brand-flex">
           <a class="navbar-brand" href="./index.html">Good News</a>
@@ -70,7 +73,6 @@
 
       <!-- More news content  -->
       <section class="grid-news">
-      
         <article class="news-1">
           <img src="https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80" alt="#"/>
           <h2>This is a headline</h2>
@@ -134,8 +136,16 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
           </p>
         </article>
-
       </section>
     </div>
+
+    <footer>
+      <div class="footer-button">
+        <a href="#header">
+          <i class="far fa-arrow-alt-circle-up"></i>
+        </a>
+      </div>
+    </footer>
+
   </body>
 </html>
