--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,114 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
+
+<!-- HEADER & NAVIGATION-->
+    <header class="flex-container">
+      <img class="logo" src="./img/logo.png" alt="logo">
+      <nav class="navigation">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">News</a></li>
+        <li><a href="#">PlayStation</a></li>
+        <li><a href="#">Xbox</a></li>
+        <li><a href="#">PC</a></li>
+      </nav>
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+    <!--NEWS CONTENT--> 
+    <main class="big-news">
+        <section class="news">
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
+          <h1 class="latest-news-title">LATEST NEWS</h1>
+          <article class="text-container">
+            <img class="big-news-image" src="./img/ps.jpeg" alt="big-news">
+            <div class="container">
+              <h1 class="big-news-title">What's new in gaming?</h1>
+              <p class="big-news-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                  Tempore, exercitationem aut non quis ut aspernatur aliquid, 
+                  laboriosam officiis mollitia modi nulla iste voluptatem ad eius 
+                  dolore ab porro ducimus est, nihil soluta asperiores. 
+                  Ab, tenetur unde temporibus dolore facilis deserunt delectus nesciunt ipsam error. 
+                  Quae non velit at vero earum?<br><br>
+                  
+                  <a>Read more</a>
+              </p>
+            </div>
+
+          </article>
+        </section>
+      </main>
+
+<!--OTHER NEWS CONTANT-->
+  <main class="big-news">
+
+      <section class="other-news">
+
+        <article class="news-card">
+          <img class="other-news-image" src="./img/other-news-img.jpeg" alt="news-image">
+          <h3 class="other-news-title">Gaming title goes here</h3>
+          <p class="other-news-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Provident aliquid aliquam consequatur eveniet laudantium ullam id maiores vel, 
+            saepe consequuntur.
+            <a>Read more</a>
+          </p>
+        </article>
+
+        <article class="news-card">
+          <img class="other-news-image" src="./img/other-news-img-2.jpeg" alt="news-image">
+          <h3 class="other-news-title">Gaming title goes here</h3>
+          <p class="other-news-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Provident aliquid aliquam consequatur eveniet laudantium ullam id maiores vel, 
+            saepe consequuntur.
+            <a>Read more</a>
+          </p>
+        </article>
+
+        <article class="news-card">
+          <img class="other-news-image" src="./img/other-news-img-3.jpeg" alt="news-image">
+          <h3 class="other-news-title">Gaming title goes here</h3>
+          <p class="other-news-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Provident aliquid aliquam consequatur eveniet laudantium ullam id maiores vel, 
+            saepe consequuntur.
+            <a>Read more</a>
+          </p>
+        </article>
+
+        <article class="news-card">
+          <img class="other-news-image" src="./img/other-news-img-4.jpeg" alt="news-image">
+          <h3 class="other-news-title">Gaming title goes here</h3>
+          <p class="other-news-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Provident aliquid aliquam consequatur eveniet laudantium ullam id maiores vel, 
+            saepe consequuntur.
+            <a>Read more</a>
+          </p>
+        </article>
+        <article class="news-card">
+          <img class="other-news-image" src="./img/other-news.jpeg" alt="news-image">
+          <h3 class="other-news-title">Gaming title goes here</h3>
+          <p class="other-news-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Provident aliquid aliquam consequatur eveniet laudantium ullam id maiores vel, 
+            saepe consequuntur.
+            <a>Read more</a>
+          </p>
+        </article>
+
+      </section>
+    </main>
+ 
+<!--FOOTER-->
+    <footer>
+      <p><a>About Us</a></p>
+      <p><a>News</a></p>
+      <p><a>Career</a></p>
+      <p><a>Contact</a></p>
+      <p class="project">This project is made by Darya Lapata as part of Technigo's coding bootcamp</p>
+    </footer>
+  
   </body>
 </html>
+
