--- a/code/index.html
+++ b/code/index.html
@@ -19,11 +19,11 @@
       </div>
       <div class="navigation">
         <nav>
-          <a class="nav-el" href="">TRENDING 🌱</a>
-          <a class="nav-el" href="">FOOD</a>
-          <a class="nav-el" href="">HEALTH</a>
-          <a class="nav-el" href="">FITNESS</a>
-          <a class="nav-el" href="">ENVIRONMENT</a>
+          <a class="nav-el" href="#">TRENDING 🌱</a>
+          <a class="nav-el" href="#">FOOD</a>
+          <a class="nav-el" href="#">HEALTH</a>
+          <a class="nav-el" href="#">FITNESS</a>
+          <a class="nav-el" href="#">ENVIRONMENT</a>
         </nav>
       </div>
       <div class="mobile-view">
@@ -51,7 +51,7 @@
           <br />
           Remember that a healthy body that has lots of energy showcases the absence of inflammation, so eat up these
           seven nutrient-dense food groups to bring you back to
-          brilliant!
+          brilliant! ⭐️
         </p>
         <br />
         <button class="read-more" type="button">Show more</button>
@@ -117,7 +117,7 @@
           src="https://media1.giphy.com/media/L2lFd3Tq0NsnCRfG1f/giphy.gif?cid=ecf05e472erti3fwu7ukw0rgfykijf7i3n7wp5jcj28ott54&rid=giphy.gif&ct=g"
           alt="vegan-vegetables">
         <h2 class="text-pics">
-          Why a plant-based diet can be better than meds for heart disease
+          Why a plant-based diet can be better than meds for heart disease?
         </h2>
       </div>
     </section>
