Header now responsive, hidden menu items in mobile. Content in small news

--- a/code/index.html
+++ b/code/index.html
@@ -16,13 +16,10 @@
         <h1>Fox News</h1>
       </div>
       <nav class="navigation">
-          <a href="#">About The Foxes</a>
-          <a href="#">Want to contribute?</a>
+          <a id="link-id" href="#">About The Foxes</a>
+          <a id="link-id" href="#">Want to contribute?</a>
+          <a class="button-link" href="#">Subscribe!</a> 
       </nav>
-      <div class="button-link">
-          <a href="#">Subscribe!</a> 
-      </div>
-
     </header>
 
     <section class="big-news-container">
@@ -44,43 +41,43 @@
       <div class="small-news-item"> 
         <a href="https://www.wired.com/story/gadget-lab-podcast-506/"> 
           <img class="small-news-img" src="./color-img.png" alt="#"/>
-        <h3 class="small-news-text">Humanity’s Obsession With Color Has Shaped Our Modern World</h3>
+        <h3 class="small-news-text">Humanity’s Obsession With Color Has Shaped Our Modern World.</h3>
         </a>
       </div>
       <div class="small-news-item"> 
         <a href="https://www.wired.com/story/gadget-lab-podcast-506/"> 
           <img class="small-news-img" src="./facemask.png" alt="facemask"/>
-        <h3 class="small-news-text">18 Face Masks We Actually Like to Wear</h3>
+        <h3 class="small-news-text">18 Face Masks We Actually Like to Wear.</h3>
         </a>
       </div>
       <div class="small-news-item"> 
-        <a href="https://www.wired.com/story/gadget-lab-podcast-506/"> 
-          <img class="small-news-img" src="./facemask.png" alt="facemask"/>
-        <h3 class="small-news-text">18 Face Masks We Actually Like to Wear</h3>
+        <a href="https://designmuseum.org/discover-design/all-design-objects/post-it-notes"> 
+          <img class="small-news-img" src="./postit.png" alt="postit-notes"/>
+        <h3 class="small-news-text">Why has this iconic paper pad stuck around for almost 40 years?</h3>
         </a>
       </div>
       <div class="small-news-item"> 
-        <a href="https://www.wired.com/story/gadget-lab-podcast-506/"> 
-          <img class="small-news-img" src="./facemask.png" alt="facemask"/>
-        <h3 class="small-news-text">18 Face Masks We Actually Like to Wear</h3>
+        <a href="https://designmuseum.org/discover-design/all-design-objects/thonet-chair-no-14"> 
+          <img class="small-news-img" src="./thonet.png" alt="thonet-chair"/>
+        <h3 class="small-news-text">Thonet Chair No. 14 - If you’ve been to a cafe you’ve probably sat on it.</h3>
         </a>
       </div>
       <div class="small-news-item"> 
-        <a href="https://www.wired.com/story/gadget-lab-podcast-506/"> 
-          <img class="small-news-img" src="./facemask.png" alt="facemask"/>
-        <h3 class="small-news-text">18 Face Masks We Actually Like to Wear</h3>
+        <a href="https://www.pacegallery.com/exhibitions/richard-avedon/"> 
+          <img class="small-news-img" src="./avedon.png" alt="avedon"/>
+        <h3 class="small-news-text">Richard Avedon - In the American West, 1979-1984</h3>
         </a>
       </div>
       <div class="small-news-item"> 
-        <a href="https://www.wired.com/story/gadget-lab-podcast-506/"> 
-          <img class="small-news-img" src="./facemask.png" alt="facemask"/>
-        <h3 class="small-news-text">18 Face Masks We Actually Like to Wear</h3>
+        <a href="https://www.davidairey.com/logo-design-love"> 
+          <img class="small-news-img" src="./logodesign.png" alt="book-cover"/>
+        <h3 class="small-news-text">Logo Design Love - A Guide to Creating Iconic Brand Identities.</h3>
         </a>
       </div>
       <div class="small-news-item"> 
-        <a href="https://www.wired.com/story/gadget-lab-podcast-506/"> 
-          <img class="small-news-img" src="./facemask.png" alt="facemask"/>
-        <h3 class="small-news-text">18 Face Masks We Actually Like to Wear</h3>
+        <a href="http://www.asalindstrom.com/"> 
+          <img class="small-news-img" src="./lindstrom.png" alt="koppar"/>
+        <h3 class="small-news-text">Åsa Lindström - "Jag är min egen regissör i min produktion"</h3>
         </a>
       </div>
 
