added small section

--- a/code/index.html
+++ b/code/index.html
@@ -4,8 +4,14 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Newsreader&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Hina+Mincho&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Newsreader&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Hina+Mincho&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
@@ -30,25 +36,18 @@
     <section class="big-news">
       <!-- The big news content -->
       <div class="cat-foto-wrapper">
-        <img src="./Pictures/Cat-picture.jpg" />
+        <img src="./Pictures/Cat-picture.jpg" alt="British short hair cat" />
       </div>
 
       <div class="big-news-text">
         <h2>WE ARE SENDING TO ALL OF YOU A CAT!</h2>
         <p>
           Recently studies have shown that cat owners do have better
-          psychological health than people without pets.<br />We collected a few
-          little-known scientific facts that prove how awesome cats really are:
-        </p>
-        <p>
-          1. They can lower your risk of heart disease.<br />
-          2. Their purring helps to heal bones, tendons and muscles.<br />
-          3. You will sleep better.<br />
-          4. They reduce stress and anxiety.<br />
-          5. You will feel happier, less nervous and more confident.
-        </p>
-        <p>
-          Here at Technigo, we want the best for all our students so we have
+          psychological health than people without pets. They help you sleeping
+          better, feeling less stressed and anxious, and even their purring
+          helps to heal tendons and muscles!<br /><br>
+
+          Here at <a href="https://www.technigo.io/program"><span>Technigo</span></a>, we want the best for all our students so we have
           adopted cats from the shelters and soon you will be receiveing them,
           of course, they will be transported safety!
         </p>
@@ -56,38 +55,51 @@
     </section>
 
     <section class="small-news">
-      <article class="small-news-one">
-        <h3>Breakfast club</h3>
-        <div class="flex">
-          <div class="text">
-            <p>We have now a fresh menu for you, starting next week!<br/><br/> Each month, we will serve you inspiring talks and activities.
-            </p>
-          </div>
+      <div class="card">
+        <h3>BREAKFAST CLUB</h3>
+        <img src="./Pictures/breakfast.jpeg" />
+        <p>
+          We have now a fresh menu for you, starting next week! Each month, we
+          will serve you inspiring talks and activities.<br> To find out more go to
+          <a
+            href="https://www.notion.so/technigo/Technigo-Remote-Frontend-Boot-Camp-69451928ffba49419c0058ad88a73eb5"
+            target="_blank"
+            > Announcements.</a>
+        </p>
+      </div>
 
-          <div>
-            <img src="./Pictures/breakfast.jpeg" />
-          </div>
-        </div>
-      </article>
+      <div class="card">
+        <h3>TRIP TO MARS</h3>
+        <img src="./Pictures/Mars.jpeg" />
+        <p>
+          We are giving away 2 tickets for going to Mars! <br> To find out more go to
+          <a
+            href="https://www.notion.so/technigo/Technigo-Remote-Frontend-Boot-Camp-69451928ffba49419c0058ad88a73eb5"
+            target="_blank"
+            > Announcements.</a
+          >
+        </p>
+      </div>
 
-      <article class="small-news-one">
-        <h3>Poya Tavakolian is going to Mars</h3>
-        <div class="flex">
-          <div class="text">
-            <p>Lorem ipsum dolor, Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, ratione. distinctio.
-            </p>
-          </div>
+      <div class="card">
+        <h3>VOLUNTEERING ROLES</h3>
+        <img src="./Pictures/Volunteering.jpeg" />
+        <p>
+          We have oppend a community kitchen for all those in need so we need some help! Volunteer with us! <br> To find out more go to
+          <a
+            href="https://www.notion.so/technigo/Technigo-Remote-Frontend-Boot-Camp-69451928ffba49419c0058ad88a73eb5"
+            target="_blank"
+            > Announcements.</a>
+        </p>
+      </div>
 
-          <div>
-            <img src="./Pictures/Mars.jpeg" />
-          </div>
-        </div>
-      </article>
-
-
+      <div class="card">
+        <h3>BILLIE EILISH  </h3>
+        <img src="./Pictures/Billie Eilish.jpeg" />
+        <p>The singer and songwriter Billie Eilish wants to take a step into programming and has joined Technigo Bootcamp.
+        </p>
+      </div>
 
     </section>
-
-
   </body>
 </html>
