Completed the Desktop version

--- a/code/index.html
+++ b/code/index.html
@@ -21,9 +21,10 @@
         <li class="aligning" label="nav-links"><a href="#" class="nav-links" alt="tech">Tech</a></li>
         <li class="aligning" label="nav-links"><a href="#" class="nav-links" alt="science">Science</a></li>
       </ul>
-      <a href="#"><img class="logo-desktop aligning" src="logo-pics/clear.svg" alt="logo-desktop" /></a>
-      <a href="#"><img class="logo-tablets-and-mobiles aligning" src="logo-pics/vector/logo-original.svg"
-          alt="logo-other" /></a>
+      <a class="hidden-logo-one" href="#"><img class="logo-desktop aligning" src="logo-pics/clear.svg"
+          alt="logo-desktop" /></a>
+      <a class="hidden-logo-two" href="#"><img class="logo-tablets-and-mobiles aligning"
+          src="logo-pics/vector/logo-original.svg" alt="logo-other" /></a>
       <ul class="navlinks-container list">
         <li class="aligning" label="nav-links"><a href="#" class="nav-links" alt="home">Home</a></li>
         <li class="aligning" label="nav-links"><a href="#" class="nav-links" alt="more">More</a></li>
@@ -74,9 +75,9 @@
       </div>
       <div class="sizing-wrapper">
         <p class="article-text">
-          Teamwork is critical to agile projects. Creating good products requires cooperation among all the members of
-          the project team, including customers
-          and stakeholders. Agile approaches support team-building and teamwork, and they emphasize trust in
+          <b class="article-title">Teamwork is critical to agile projects!</b> Creating good products requires
+          cooperation among all the members of the project team, including customers and stakeholders. Agile approaches
+          support team-building and teamwork, and they emphasize trust in
           self-managing development teams. A skilled,
           motivated, unified, and empowered project team is a successful team.
           <a href="https://www.dummies.com/careers/project-management/use-agile-principles-teamwork-project/"
