add icon and link to social media in footer

--- a/code/index.html
+++ b/code/index.html
@@ -21,7 +21,7 @@
           href="./images/site.webmanifest">
     <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Besley&display=swap"
           rel="stylesheet">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
  
   <body>
@@ -157,6 +157,9 @@
 
     <footer>
       <p>Made by Sofia Willebrand 🐘 </p>
+      <li><a href="https://www.linkedin.com/in/sofia-willebrand/" target="_blank"><i class="fa fa-linkedin-square" style="font-size:24px"></i></a></li>
+      <li><a href="https://github.com/sofiawillebrand" target="_blank"><i class="fa fa-github" style="font-size:24px"></i></a></li>
+      <li><a href="https://stackoverflow.com/users/7478955/sofia-willebrand" target="_blank"><i class="fa fa-stack-overflow" style="font-size:24px"></i></a></li>
     </footer>
   </body>
 </html>
