--- a/code/index.html
+++ b/code/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.gstatic.com"> 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
 
@@ -16,114 +16,111 @@
 <body>
   <header>
 
-   
-    
+   <!-- logo and navbar -->
+
     <nav class="navigation">
-      <div class="arch-mag"> 
-        <img class="logo" src="./logo.svg" alt="Logo">
+      <div class="arch-mag">
+        <img class="logo" src="../images/am-logo.png" alt="Logo">
         <h1> ARCHitecture MAGazine</h1>
       </div>
-      <div>
-        <ul class="nav-links">
+
+      <div class="left-links">
+        <ul>
           <li> <a href="#">HOME</a></li>
           <li> <a href="#">PROJECTS</a></li>
+        </ul>
+      </div>
+
+      <div class="right-links">
+        <ul>
           <li> <a href="#">DESIGN</a></li>
           <li> <a href="#">NEWS</a> </li>
         </ul>
       </div>
     </nav>
 
-    <!-- Some kind of logo and navbar -->
-
   </header>
 
+   <!-- The big news content -->
+
   <section class="big-news">
-    <!-- The big news content -->
 
     <img class="big-news-image" src="../images/fran.jpg" alt="Fran">
-    <h2 class="big-news-text">This week a redesign of the Lloyd's building by Richard Rogers was announced!
-      <br> This week on ARCHMAG, insurance company Lloyd's of London revealed it would overhaul the iconic Underwriting
-      Room at the heart of its high-tech Lloyd's building in London designed by Richard Rogers.
+    <h2 class="big-news-text"> <em> 
+      This week a redesign of the Hadid`s building by Henry Rogers was announced!</em> <br>
+      <br> This week on ARCHMAG, insurance company Hadid`s of London revealed it would overhaul the iconic Underwriting
+      Room at the heart of its high-tech building in London designed by Henry Rogers.
       <br>
-      <a href="#"><i>Read more>> </i></a>
+      <a href="#"> <i> Read more>> </i></a>
     </h2>
   </section>
-<hr>
+  <hr>
 
   <a class="top-news-text" href="#">LATEST NEWS</a>
 
-  <section class="news-cards">
     <!-- The other news  -->
+
+  <section class="news-cards">
+
+
     <div class="card">
       <h4>AWARDS</h4>
       <img class="news-image" src="../images/adrien.jpg" alt="Adrien">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et accumsan quam, sed rutrum neque. Nulla ac
-        orci consequat, consectetur quam et, sodales turpis.  <br> 
+      <p>Although the architect was based on a classical structure for the design of the house, changed the original by making 
+        the garden participate actively in the composition of the house concept.  <br>
         <a href="#">Read more >></a> </p>
     </div>
     <div class="card">
       <h4>DESIGN</h4>
       <img class="news-image" src="../images/chris.jpg" alt="Chris">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et accumsan quam, sed rutrum neque. Nulla ac
-        orci consequat, consectetur quam et, sodales turpis.  <br> <a
-          href="#">Read more >></a> </p>
+      <p>For coffered ceiling inside the entrance atrium architect first used in domestic architecture, glass block ceiling. <br> <a href="#">Read more >></a> </p>
     </div>
     <div class="card">
       <h4>INTERIOR</h4>
       <img class="news-image" src="../images/martin.jpg" alt="Martin">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et accumsan quam, sed rutrum neque. Nulla ac
-        orci consequat, consectetur quam et, sodales turpis.  <br><a
-          href="#">Read more >></a> </p>
+      <p>On the street facade highlights the many tall windows with white woodwork and shutters in one sector and the other cut on the stone.  <br><a href="#">Read more >></a> </p>
     </div>
     <div class="card">
       <h4>INTERIOR</h4>
       <img class="news-image" src="../images/knubb.jpg" alt="knubb">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et accumsan quam, sed rutrum neque. Nulla ac
-        orci consequat, consectetur quam et, sodales turpis.  <br> <a
-          href="#">Read more >></a> </p>
+      <p>These two contrasting spaces that complement each other perfectly are created by an arched volume of wood. <br> <a href="#">Read more >></a> </p>
     </div>
     <div class="card">
       <h4>NEWS</h4>
       <img class="news-image" src="../images/pawel.jpg" alt="Pawel">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et accumsan quam, sed rutrum neque. Nulla ac
-        orci consequat, consectetur quam et, sodales turpis.  <br> <a
-          href="#">Read more >></a> </p>
+      <p>The long, narrow site designated for the new library presented some technical challenges, including the need to consider the future construction of a tunnel. <br> <a href="#">Read more >></a> </p>
     </div>
     <div class="card">
       <h4>AWARDS</h4>
       <img class="news-image" src="../images/pierre.jpg" alt="Pierre">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et accumsan quam, sed rutrum neque. Nulla ac
-        orci consequat, consectetur quam et, sodales turpis. <br> <a
-          href="#">Read more >></a> </p>
+        orci consequat, consectetur quam et, sodales turpis. <br> <a href="#">Read more >></a> </p>
     </div>
     <div class="card">
       <h4>DESIGN</h4>
       <img class="news-image" src="../images/roman.jpg" alt="Roman">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et accumsan quam, sed rutrum neque. Nulla ac
-        orci consequat, consectetur quam et, sodales turpis.  <br> <a
-          href="#">Read more >></a> </p>
+      <p>The building is a public space owned by citizens and open to all people. Its design was done by encouraging active participation among residents and partners. <br> <a href="#">Read more >></a> </p>
     </div>
     <div class="card">
       <h4>OFFICE</h4>
       <img class="news-image" src="../images/patrick.jpg" alt="Patrick">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et accumsan quam, sed rutrum neque. Nulla ac
-        orci consequat, consectetur quam et, sodales turpis. <br><a
-          href="#">Read more >></a> </p>
+      <p>The combination of its steel and glass structure with the wood of the facade results in a striking building. <br><a href="#">Read more >></a> </p>
     </div>
   </section>
 
+    <!-- Call to action   -->
 
   <section class="cta">
-
     <h3 class="cta-text">Get all the latest news from ARCH MAG. </h3>
     <button type="button" class="sub-btn">Subscribe</button>
   </section>
 
 
-
+    <!-- Footer section   -->
   <footer>
-    <p class="footer-info">This project was made by <b>Pınar Demirel Etli</b> as a student project in the <a href="https://www.technigo.io/">Technigo </a> Boot Camp.</p>
-    <p>© Copyright 2021</p>
+    <p class="footer-info"> © 2021 Pınar Demirel Etli 🦊 </p>
+    <p class="footer-info">This page was made as a student project during the <a
+        href="https://www.technigo.io/">Technigo </a> Boot Camp.</p>
   </footer>
 
 
